--- a/src/UI/Input/Input.module.css
+++ b/src/UI/Input/Input.module.css
@@ -1,7 +1,7 @@
 .Input {
   width: 100%;
-  height: 40px;
-  padding: 10px;
+  height: 4rem;
+  padding: 1rem;
   box-sizing: border-box;
   border: 2px solid lightgray;
   color: #419A94;
