--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -1,16 +1,17 @@
-.popup {
-  --color-primary: #419A94;
-  height: 100vh;
+
+.backdrop {
+  height: 100%;
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, .7);
-  z-index: 5;
+  z-index: 1;
 }
 
-.container {
-  width: 50%;
+.popup {
+  z-index: 2;
+  width: 40%;
   background-color: white;
   box-shadow: 0 2rem 4rem rgba(0, 0, 0, .2);
   position: absolute;
@@ -18,17 +19,19 @@
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 4rem;
+}
+.header {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  position: relative;
+}
+
+.content {
   display: flex;
   flex-direction: column;
 }
-
-.header {
-  color: var(--color-primary);
-  font-size: 2rem;
-}
-
 .item {
-  padding: 2rem 0;
+  padding-bottom: 1rem;
 } 
 
 .dateTime {
@@ -37,7 +40,6 @@
 
 .dateTime > input {
   display: flex;
-
 }
 
 .firstInput{
@@ -45,7 +47,7 @@
   width: 100%
 }
 
-button {
+.button {
   width: 13rem;
   align-self: flex-end;
   background-color: var(--color-primary);
@@ -55,7 +57,19 @@ button {
   height: 4rem;
 }
 
-button:hover {
+.button:hover {
   background-color: #4cbbb4;
   cursor: pointer;
+}
+
+.closeButton{
+  background: none;
+  border: none;
+  outline: none;
+  font-size: 3rem;
+  font-weight: 300;
+  position: absolute;
+  top: -1rem;
+  right:0;
+  color: inherit;
 }
