--- a/src/UI/Select/Select.module.css
+++ b/src/UI/Select/Select.module.css
@@ -4,7 +4,7 @@
   padding: 1rem;
   box-sizing: border-box;
   border: 2px solid lightgray;
-  color: #419A94;
+  color: rgb(114, 113, 113);
   font-weight: bold;
   outline-style: none;
   border-radius: 6px;
