--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -1,6 +1,6 @@
 
 .backdrop {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   position: fixed;
   top: 0;
@@ -11,10 +11,10 @@
 
 .popup {
   z-index: 2;
-  width: 40%;
+  width: 45%;
   background-color: white;
   box-shadow: 0 2rem 4rem rgba(0, 0, 0, .2);
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -30,8 +30,9 @@
   display: flex;
   flex-direction: column;
 }
+
 .item {
-  padding-bottom: 1rem;
+  padding-bottom: 1.5rem;
 } 
 
 .dateTime {
@@ -57,4 +58,9 @@
   top: -1rem;
   right:0;
   color: inherit;
+}
+
+.button {
+  display: flex;
+  justify-content: flex-end;
 }
